--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/tyomhk2015/tscoin2022#readme",
   "devDependencies": {
-    "typescript": "^4.7.2"
+    "@types/node": "^18.0.0",
+    "typescript": "^4.7.4"
   }
 }
